--- a/404.html
+++ b/404.html
@@ -1,15 +1,1 @@
-<!DOCTYPE html>
-<html lang="cs">
-<head>
-  <meta charset="UTF-8">
-  <title>Stránka nenalezena</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-  <main>
-    <h1>404 – Stránka nenalezena</h1>
-    <p>Omlouváme se, ale požadovaná stránka neexistuje.</p>
-    <a href="index.html">Zpět na hlavní stránku</a>
-  </main>
-</body>
-</html>
+<!doctype html><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><title>404</title><style>body{font-family:system-ui;margin:0;display:grid;place-items:center;height:100vh;background:#F5F3EE;color:#163E6C}</style><h1>404 – Stránka nenalezena</h1>
