--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Účto v kapse — Paper Play</title>
-  <meta name="description" content="Účto v kapse — účetnictví a daně pro živnostníky (OSVČ). Hravý Paper Play styl: sticky notes, izolepa, papírová textura a ilustrace.">
-  <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@600;700&family=Nunito:wght@400;600;700&family=Caveat:wght@700&display=swap" rel="stylesheet">
+  <title>Účto v kapse — Paper Play (Varianta B)</title>
+  <meta name="description" content="Účto v kapse — účetnictví a daně pro OSVČ. Varianta B s typografií Rubik / Signika / Caveat a plnou podporou diakritiky.">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@700&family=Signika:wght@400;600&family=Caveat:wght@700&display=swap&subset=latin-ext" rel="stylesheet">
   <link rel="icon" href="assets/logo_uvk.svg"/>
   <link rel="stylesheet" href="styles.css"/>
 </head>
 <body class="paper-bg">
   <a class="skip" href="#content">Přeskočit na obsah</a>
-  <!-- Header (single nav) -->
   <header class="site-header" id="top">
     <div class="container header-inner">
       <a class="brand" href="#top" aria-label="Účto v kapse — domů">
@@ -29,21 +30,18 @@
   </header>
 
   <main id="content">
-    <!-- HERO -->
     <section class="section hero">
       <div class="container hero-grid">
-        <!-- Left sticky card with mascot -->
         <div class="sticky big">
           <div class="tape tape--tl"></div>
           <div class="tape tape--tr"></div>
           <img class="brain" src="assets/brain.svg" alt="Maskot mozek se žárovkou"/>
           <h1 class="hero-logo">Účto v kapse</h1>
         </div>
-        <!-- Right heading & CTA -->
         <div>
           <h1 class="hero-title">Účto v kapse — účetnictví a daně pro živnostníky (OSVČ)</h1>
           <p class="hero-sub em-hand marker">bez stresu</p>
-          <p class="lead">Od prvního dokladu po přiznání — srozumitelně, online a včas. Styl jako na vašich sociálních sítích: sticky notes, izolepa a přehlednost.</p>
+          <p class="lead">Od prvního dokladu po přiznání — srozumitelně, online a včas. Sticky notes, izolepa a papírové pozadí pro hravý a přátelský dojem.</p>
           <p class="cta-row">
             <a class="btn btn--primary" href="#kontakt">Chci mít účetnictví v kapse</a>
             <a class="btn btn--ghost" href="#kontakt">Domluvit konzultaci</a>
@@ -51,7 +49,6 @@
         </div>
       </div>
 
-      <!-- Service cards row (as in mockup) -->
       <div class="container services">
         <div class="svc card note">
           <img src="assets/icon-folder.svg" alt="Ikona složky" width="32" height="32"/>
@@ -84,19 +81,17 @@
       </div>
     </section>
 
-    <!-- WHY US -->
     <section id="proc" class="section section--cream">
       <div class="container">
         <h2>Proč si vybrat nás</h2>
         <div class="grid grid--3 why">
-          <div class="sticky"><div class="tape tape--tl"></div><h3>Kontakt</h3><p>Napíšte, nebojte se — ozveme se rychle.</p></div>
+          <div class="sticky"><div class="tape tape--tl"></div><h3>Kontakt</h3><p>Napište, nebojte se — ozveme se rychle.</p></div>
           <div class="sticky"><div class="tape tape--tr"></div><h3>Konzultace</h3><p>Zdarma, sdílíme zkušenosti a doporučení.</p></div>
           <div class="sticky"><div class="tape tape--tl"></div><h3>Doklady</h3><p>Přebíráme, třídíme a včas podáváme.</p></div>
         </div>
       </div>
     </section>
 
-    <!-- PROCESS -->
     <section id="proces" class="section">
       <div class="container">
         <h2>Jak to probíhá</h2>
@@ -109,7 +104,6 @@
       </div>
     </section>
 
-    <!-- TIPS -->
     <section id="blog" class="section section--cream">
       <div class="container">
         <h2>Tipy a <span class="em-hand">návody</span></h2>
@@ -121,7 +115,6 @@
       </div>
     </section>
 
-    <!-- CTA -->
     <section class="section cta">
       <div class="container cta__inner">
         <h2>Je čas mít účetnictví v kapse</h2>
@@ -129,7 +122,6 @@
       </div>
     </section>
 
-    <!-- CONTACT -->
     <section id="kontakt" class="section">
       <div class="container">
         <h2>Kontakt</h2>
